Version 2.03.34 - 
==================
  Enhanced lvresize -r support for btrfs.
  Use glibc standard functions htoX, Xtoh functions for endian conversion.
  Fix structure copying within sanlock's release_rename().
  Fix autoactivation on top of loop dev PVs to trigger once for change uevents.
  lvconvert: reject raid1 and mirror LV non-changing image requests
  Fix support for lvcreate -T --setautoactivation.
  Add lvm.conf global/lvresize_fs_helper_executable.
  Enable lvm to use persistent reservations on a VG.

Version 2.03.33 - 27th June 2025
================================
  Various spelling, grammar, formatting, test, and build script improvements.
  Override LC_NUMERIC locale if unsuitable for json_std report format.
  Repair raid arrays with transiently lost devices.

Version 2.03.32 - 05th May 2025
===============================
  Lvconvert vdopool conversion properly validates acceptable LVs.
  Accept thin pool data LV as cacheable LV.
  Allow using zram block devices (likely for testing).
  Fix lvresize when resizing COW snapshots already covering origin.
  Fix lvmdbusd read of executed lvm commands output.
  Fix construction of DM UUID for cachevol _cdata and _cmeta devices.
  Ignore PV claims from old metadata when then PV belongs to a new VG.
  Fix integrity metadata rounding.
  Accept --autobackup option in pvresize.

Version 2.03.31 - 27th February 2025
====================================
  Reduce 'mandoc -T lint' reported issues for man pages.
  Restore support for LVM_SUPPRESS_FD_WARNINGS (2.03.24).
  Fix uncache and split cache restoring original state of volume.
  Extend use of lockopt skip to more scenarios.
  Enhance error path resolving in polling code.
  Disallow shared activation of LV with CoW snapshot.
  Fix lvmlockd use in lvremove of CoW snapshot, VDO pool, and uncache.
  Improve mirror split with opened temporary volumes.
  Improve pvmove finish with opened temporary volumes.